--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,7 @@ p {
   border: 1px solid var(--tan);
   background-color: white;
   font-size: var(--small-text);
+  min-height: 32px;
   height: 100%;
   margin: 0;
   padding: 0 15px;
@@ -269,10 +270,13 @@ p {
 }
 
 .btn-neutral {
-  padding: 13px;
   margin: 5% auto 0;
   text-align: center;
   width: 10.62rem;
+}
+
+span.btn-neutral, a.btn-neutral {
+  padding: 13px;
 }
 
 .btn-secondary {
@@ -370,13 +374,13 @@ p {
 .content {
   box-sizing: border-box;
   margin-left: 200px;
-  padding: 3%;
+  padding: 30px;
 }
 
 .content-grid {
   display: grid;
   grid-auto-flow: column;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: repeat(5, auto);
   height: 100%;
 }
 
@@ -385,7 +389,7 @@ p {
 }
 
 .section-header {
-  margin-bottom: 3%;
+  margin-bottom: 10px;
 }
 
 /* Popup */
@@ -463,10 +467,6 @@ p {
 }
 
 /* Utilities */
-.hidden {
-  display: none;
-}
-
 .col-6 {
   flex-basis: 50%;
 }
@@ -534,6 +534,7 @@ p {
 }
 
 .bottom-navbar-container {
+  align-self: end;
   box-sizing: border-box;
   font-weight: 300;
   margin-bottom: 15px;
@@ -561,6 +562,31 @@ p {
 }
 
 /* Table */
+.table-action-buttons {
+  margin-bottom: 10px;
+}
+
+.table-select-action-buttons {
+  display: flex;
+  gap: 15px;
+}
+
+.table-select-action-buttons .btn {
+  background-color: white;
+  border: 1px solid var(--tan);
+  color: var(--brown);
+  font-size: var(--smaller-text);
+  /* margin: 0 0 10px; */
+  margin: 0;
+  height: auto;
+  padding: 8px 5px;
+  width: 100px;
+}
+
+.table-select-action-buttons .btn .icon {
+  margin-right: 5px;
+}
+
 .table-container {
   background-color: white;
   overflow: auto;
@@ -573,6 +599,7 @@ p {
 
 .table-header {
   background-color: var(--brown);
+  box-shadow: 0px 5px 10px rgba(208, 180, 159, 0.2);
   color: white;
   position: sticky;
   text-align: left;
@@ -620,10 +647,15 @@ p {
 }
 
 .table-body tr th {
+  /* padding: 0; */
   width: 5%;
 }
 
-
+.table input {
+  /* padding: 20px; */
+  width: 15px;
+  height: 15px;
+}
 
 .no-action {
   display: block;
@@ -839,6 +871,10 @@ p {
 
 
 /* Functionality */
+.hidden {
+  display: none;
+}
+
 .active {
   border-radius: 100px;
   background-color: var(--tan);
