--- a/css/styles.css
+++ b/css/styles.css
@@ -104,8 +104,8 @@ input, select {
 :root {
   --sandDollar: #E4D4C8;
   --tan: #D0B49F;
-  --brown: #A47551;
   --lighter-brown: #BB865F;
+  --brown: #A47551;
   --carafe: #523A28;
   --orange: #FF914D;
 
@@ -140,6 +140,10 @@ a {
 body {
   background-color: #F9F9FB;
   font-family: 'Montserrat', sans-serif;
+}
+
+figcaption {
+  font-size: 1rem;
 }
 
 hr {
@@ -336,7 +340,7 @@ span.btn-neutral, a.btn-neutral {
   top: -1.5px;
 }
 
-.btn-outline {
+.btn-outline, .btn-outline-light {
   border: 1px solid var(--brown);
   background-color: transparent;
   color: var(--carafe);
@@ -344,12 +348,27 @@ span.btn-neutral, a.btn-neutral {
   padding: 0 20px;
 }
 
+.btn-outline-light {
+  color: white;
+}
+
 .btn-outline:hover {
+  background-color: white;
+}
+
+.btn-outline-light:hover {
+  color: var(--carafe);
   background-color: white;
 }
 
 
 /* Texts */
+.section-description {
+  margin: 1rem 0 2rem;
+  text-align: justify;
+  text-indent: 50px;
+}
+
 .secondary-texts {
   font-weight: 300;
 }
@@ -359,7 +378,7 @@ span.btn-neutral, a.btn-neutral {
 }
 
 .underlined-text {
-  text-decoration: underline;
+  text-decoration: underline !important;
 }
 
 .clickable-text:hover {
@@ -367,6 +386,11 @@ span.btn-neutral, a.btn-neutral {
 }
 
 /* Headings */
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
 .heading2, .heading3, .heading4 {
   font-size: var(--bigger-text);
   font-weight: 600;
@@ -390,6 +414,11 @@ span.btn-neutral, a.btn-neutral {
 
 
 /* Containers */
+.wrapper {
+  margin: auto;
+  width: 85%;
+}
+
 .container-center {
   align-items: center;
   display: flex;
@@ -411,6 +440,7 @@ span.btn-neutral, a.btn-neutral {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 }
 
 .half-of-whole {
@@ -605,7 +635,8 @@ span.btn-neutral, a.btn-neutral {
 }
 
 .contact {
-  font-size: var(--small-text);
+  font-size: var(--extra-small-text);
+  font-weight: 500;
 }
 
 /* Table */
@@ -895,20 +926,39 @@ span.btn-neutral, a.btn-neutral {
 
 /* Home */
 .home-header {
-  position: relative;
   text-align: center;
 }
 
-.header-image {
-  height: 421px;
-  object-fit: cover;
+.sliding-image-container {
+  position: relative;
+}
+
+.home-heading  {
+  color: white;
+  left: 10%;
+  position: absolute;
+  text-align: left;
+  top: 20%;
+  width: 85%;
+}
+
+.image-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
 .header-slides-images {
-  width: 1166px;
   position: relative;
   margin: auto;
+}
+
+.header-image {
+  height: 500px;
+  object-fit: cover;
+  width: 100%;
 }
 
 .prev, .next {
@@ -952,21 +1002,247 @@ span.btn-neutral, a.btn-neutral {
   background-color: var(--tan);
 }
 
-.header-description {
-  margin: 3%;
-  text-align: justify;
-  text-indent: 50px;
+
+/* Home Event */
+.container {
+  max-width: 1044px;
 }
 
+.carousel {
+  display: block;
+  text-align: left;
+  position: relative;
+  margin-bottom: 22px;
+}
 
+.carousel>input {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+}
 
+.carousel>input:nth-of-type(6):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: -500%;
+}
 
+.carousel>input:nth-of-type(5):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: -400%;
+}
 
+.carousel>input:nth-of-type(4):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: -300%;
+}
 
+.carousel>input:nth-of-type(3):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: -200%;
+}
 
+.carousel>input:nth-of-type(2):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: -100%;
+}
 
+.carousel>input:nth-of-type(1):checked~.carousel__slides .carousel__slide:first-of-type {
+  margin-left: 0%;
+}
 
+.carousel>input:nth-of-type(1):checked~.carousel__thumbnails li:nth-of-type(1) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
 
+.carousel>input:nth-of-type(2):checked~.carousel__thumbnails li:nth-of-type(2) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
+
+.carousel>input:nth-of-type(3):checked~.carousel__thumbnails li:nth-of-type(3) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
+
+.carousel>input:nth-of-type(4):checked~.carousel__thumbnails li:nth-of-type(4) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
+
+.carousel>input:nth-of-type(5):checked~.carousel__thumbnails li:nth-of-type(5) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
+
+.carousel>input:nth-of-type(6):checked~.carousel__thumbnails li:nth-of-type(6) {
+  box-shadow: 0px 0px 0px 5px rgba(164, 117, 81, 1);
+}
+
+.carousel__slides {
+  position: relative;
+  z-index: 1;
+  padding: 0;
+  margin: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  box-sizing: border-box;
+  display: flex;
+}
+
+.carousel__slide {
+  position: relative;
+  display: block;
+  flex: 1 0 100%;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transition: all 300ms ease-out;
+  vertical-align: top;
+  box-sizing: border-box;
+  white-space: normal;
+}
+
+.carousel__slide figure {
+  display: flex;
+  margin: 0;
+}
+
+.carousel__slide div {
+  position: relative;
+  width: 100%;
+}
+
+.carousel__slide div:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 66.6666666667%;
+}
+
+.carousel__slide div>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__slide img {
+  display: block;
+  flex: 1 1 auto;
+  object-fit: cover;
+}
+
+.carousel__slide figcaption {
+  align-self: flex-end;
+  padding: 20px 20px 0 20px;
+  flex: 0 0 auto;
+  width: 35%;
+  min-width: 150px;
+  font-size: 1.5rem;
+}
+
+.carousel__slide .credit {
+  font-size: var(--normal-text);
+  margin-top: 1rem;
+  color: rgba(164, 117, 81, 1);
+  display: block;
+}
+
+.carousel__slide.scrollable {
+  overflow-y: scroll;
+}
+
+.carousel__thumbnails {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  margin: 0 -10px;
+}
+
+.carousel__slides+.carousel__thumbnails {
+  margin-top: 2.5rem;
+}
+
+.carousel__thumbnails li {
+  flex: 1 1 auto;
+  max-width: calc((100% / 6) - 20px);
+  margin: 0 10px;
+  transition: all 300ms ease-in-out;
+}
+
+.carousel__thumbnails label {
+  display: block;
+  position: relative;
+}
+
+.carousel__thumbnails label:before {
+  display: block;
+  content: "";
+  width: 100%;
+  padding-top: 100%;
+}
+
+.carousel__thumbnails label>img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.carousel__thumbnails label:hover, .carousel__thumbnails label:focus {
+  cursor: pointer;
+}
+
+.carousel__thumbnails label:hover img, .carousel__thumbnails label:focus img {
+  box-shadow: 0px 0px 0px 1px rgba(164, 117, 81, 1);
+  transition: all 300ms ease-in-out;
+}
+
+.carousel__thumbnails img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Home Activities */
+.grid-image {
+  background-color: red;
+  width: 100%;
+  height: 100%;
+}
+
+.activity-grid-box {
+  position: relative;
+}
+
+.activity-name-container {
+  background: linear-gradient(to top, rgba(164, 117, 81, 0.4), rgba(187, 134, 95, 0.2), rgba(208, 180, 159, 0.0));
+  bottom: 0;
+  box-sizing: border-box;
+  padding: 0 20px;
+  position: absolute;
+  width: 100%;
+}
+
+.activity-name-container .heading3 {
+  color: white;
+  font-weight: 600;
+}
+
+/* Call To Action */
+.cta.row {
+  display: flex;
+}
+
+.cta .btn {
+  height: 3rem;
+  margin-top: 30px;
+  width: 200px;
+}
 
 /* Functionality */
 .hidden {
